--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,4 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,17 +6,48 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  background: linear-gradient(30deg, rgb(20, 9, 49) 0%, rgb(54, 54, 134) 35%, rgba(0,212,255,1) 100%);
 }
 
-.App-link {
-  color: #61dafb;
+.result {
+  text-align: center;
+  margin-top: 5vh;
+  font-weight: bolder;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#desc {
+  font-weight: 100;
+}
+
+#grid {
+  border-radius: 20px;
+  background-color: rgba(211, 211, 211, 0.185);
+  padding: 40px;
+  box-shadow: 0px 0px 10px 0px rgba(17, 18, 29, 0.26)
+}
+
+input {
+  padding: 10px;
+  padding-right: 100px;
+  border-radius: 15px;
+  margin-right: 10px;
+  border-color: rgb(185, 219, 248);
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.212);
+  color: white;
+}
+
+::placeholder {
+  color: white;
+  font-weight: bold;
+}
+
+button {
+  padding: 10px;
+  border-color: rgb(185, 219, 248);
+  border-radius: 15px;
+  margin-right: 10px;
+  background-color: rgba(255, 255, 255, 0.212);
+  color: white;
+  font-weight: bold;
 }
